[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/UbuntuCondensed-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Editor.gd" type="Script" id=2]
[ext_resource path="res://Scenes/eyes.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/body.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=1]
default_font = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.611765, 0.611765, 0.611765, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="Vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="VideoUI" type="Panel" parent="Vbox"]
margin_right = 1024.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="body" parent="Vbox/VideoUI" instance=ExtResource( 4 )]

[node name="eyes" parent="Vbox/VideoUI" instance=ExtResource( 3 )]

[node name="ControllerUI" type="Panel" parent="Vbox"]
margin_top = 400.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="Vbox/ControllerUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Editor" type="VBoxContainer" parent="Vbox/ControllerUI/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 110.0
size_flags_vertical = 3

[node name="Control" type="Control" parent="Vbox/ControllerUI/VBoxContainer/Editor"]
margin_right = 1024.0
margin_bottom = 90.0
size_flags_vertical = 3

[node name="TimelineBg" type="Panel" parent="Vbox/ControllerUI/VBoxContainer/Editor/Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 6.0
margin_top = 27.0
margin_right = -6.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 10 )
custom_styles/panel = SubResource( 3 )

[node name="Tags" type="Control" parent="Vbox/ControllerUI/VBoxContainer/Editor/Control/TimelineBg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0
margin_bottom = -12.0

[node name="Timeline" type="Panel" parent="Vbox/ControllerUI/VBoxContainer/Editor/Control"]
modulate = Color( 0.121569, 0.380392, 0.203922, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 6.0
margin_top = 27.0
margin_right = -918.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 5 )
custom_styles/panel = SubResource( 3 )

[node name="progress" type="HSlider" parent="Vbox/ControllerUI/VBoxContainer/Editor"]
margin_top = 94.0
margin_right = 1024.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.0

[node name="Controller" type="HBoxContainer" parent="Vbox/ControllerUI/VBoxContainer"]
margin_top = 114.0
margin_right = 1024.0
margin_bottom = 148.0
custom_constants/separation = 10

[node name="space2" type="Control" parent="Vbox/ControllerUI/VBoxContainer/Controller"]
margin_right = 10.0
margin_bottom = 34.0
rect_min_size = Vector2( 10, 0 )

[node name="Play" type="Button" parent="Vbox/ControllerUI/VBoxContainer/Controller"]
margin_left = 20.0
margin_right = 90.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
size_flags_vertical = 5
text = "PLAY"

[node name="Stop" type="Button" parent="Vbox/ControllerUI/VBoxContainer/Controller"]
margin_left = 100.0
margin_right = 170.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
size_flags_vertical = 5
text = "STOP"

[node name="Run" type="Button" parent="Vbox/ControllerUI/VBoxContainer/Controller"]
margin_left = 180.0
margin_right = 250.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
size_flags_vertical = 5
text = "RUN"

[node name="time" type="Label" parent="Vbox/ControllerUI/VBoxContainer/Controller"]
margin_left = 260.0
margin_top = 3.0
margin_right = 310.0
margin_bottom = 31.0
rect_min_size = Vector2( 50, 0 )
text = "00.00"
align = 1

[node name="aud_label" type="Label" parent="Vbox/ControllerUI/VBoxContainer/Controller"]
margin_left = 320.0
margin_top = 3.0
margin_right = 510.0
margin_bottom = 31.0
text = "No audio file selected"

[node name="DataController" type="HBoxContainer" parent="Vbox/ControllerUI/VBoxContainer"]
margin_top = 152.0
margin_right = 1024.0
margin_bottom = 186.0
custom_constants/separation = 10

[node name="space2" type="Control" parent="Vbox/ControllerUI/VBoxContainer/DataController"]
margin_right = 10.0
margin_bottom = 34.0
rect_min_size = Vector2( 10, 0 )

[node name="Load" type="Button" parent="Vbox/ControllerUI/VBoxContainer/DataController"]
margin_left = 20.0
margin_right = 90.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
size_flags_vertical = 5
text = "LOAD"

[node name="Save" type="Button" parent="Vbox/ControllerUI/VBoxContainer/DataController"]
margin_left = 100.0
margin_right = 170.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
size_flags_vertical = 5
text = "SAVE"

[node name="label" type="Label" parent="Vbox/ControllerUI/VBoxContainer/DataController"]
margin_left = 180.0
margin_top = 3.0
margin_right = 180.0
margin_bottom = 31.0

[node name="space" type="Control" parent="Vbox/ControllerUI/VBoxContainer"]
margin_top = 190.0
margin_right = 1024.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 10 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 550, 200 )

[connection signal="value_changed" from="Vbox/ControllerUI/VBoxContainer/Editor/progress" to="." method="_on_progress_value_changed"]
[connection signal="pressed" from="Vbox/ControllerUI/VBoxContainer/Controller/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Vbox/ControllerUI/VBoxContainer/Controller/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Vbox/ControllerUI/VBoxContainer/Controller/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="Vbox/ControllerUI/VBoxContainer/DataController/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Vbox/ControllerUI/VBoxContainer/DataController/Save" to="." method="_on_Save_pressed"]
